[project]
name = "nanoCA"
version = "1.0.0"
authors = [
  { name="Tero Mononen", email="tmo+nanoca@iki.fi" },
]
description = "Nano CA with Secret Sharing"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
         "click"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tmorlando/nanoca/"

[build-system]
requires = [
           "setuptools", "click"
]